--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   google_fonts: 
   smooth_page_indicator:
   http:
+  vibration: ^1.8.3
+  flutter_riverpod: ^2.4.6
 
 dev_dependencies:
   flutter_test:
